--- a/aboutPage.html
+++ b/aboutPage.html
@@ -11,7 +11,7 @@
             <div class="container-left">
                 <nav class="site-nav">
                     <ul class="group-nav>">
-                        <li><a href="homePageNew.html">home</a></li>
+                        <li><a href="index.html">home</a></li>
                         <li><a href="aboutPage.html">about</a></li>
                         <li><a href="cvPage.html">cv</a></li>
                         <li><a href="contactPage.html">contact</a></li>
