update about page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -27,7 +27,7 @@
                     </div> <!-- end of div class="aboutLine" -->   
                 </div> <!-- end of div class="aboutHeader group" -->
                 <div class="aboutContent">
-                    <p>I am a software tester with many years of experience mainly in e-commerce projects. For the last few years, I've been working for a german telekom client.</p> 
+                    <p>The opportunity to develop in my role as a software tester in e-commerce for a German telecom client has enabled me to fortify my skills as an effective communicator, and an individual who is proficient in task management.</p> 
                     <p>I have one year of experience in automated testing based on the Cypress framework and javascript / typescript language. I am always open to new challenges and I am strongly focused on developing my skills.</p>
                     <p>Out of the need of the heart, I am currently relocating to Scotland and I am looking for a company for a long-term contract. I will be happy to get interesting experiences and meet wonderful people on board.</p>
                     <p>In my spare time, I am keen on sports, movies and coocking. I am also looking for a belay partner for climbing :)</p>
