--- a/aboutPage.html
+++ b/aboutPage.html
@@ -13,8 +13,7 @@
                     <ul class="group-nav>">
                         <li><a href="index.html">home</a></li>
                         <li><a href="aboutPage.html">about</a></li>
-                        <li><a href="cvPage.html">cv</a></li>
-                        <li><a href="contactPage.html">contact</a></li>
+                        <li><a href="cvPage.html">resume</a></li>
                     </ul>
                 </nav>
                 <div class="aboutHeader group">
