--- a/aboutPage.html
+++ b/aboutPage.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport"content="width=device-width initial-scale=1"></meta>
         <link rel="stylesheet" href="css/aboutPage.css">
         <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <div class="content-area group">    
+            <div class="background">
+                <img class="background-photo" src="images/profile-half-left.jpg" alt=”Izabela Kamińska - zdjęcie profilowe">
+            </div>
             <div class="container-left">
                 <nav class="site-nav">
                     <ul class="group-nav>">
@@ -26,11 +30,11 @@
                     </div> <!-- end of div class="aboutLine" -->   
                 </div> <!-- end of div class="aboutHeader group" -->
                 <div class="aboutContent">
-                    <p>Hello! My name is Izabela and I'm a software tester.</p>
-                    <p>The opportunity to develop in my role as a software tester in e-commerce for a German telecom client has enabled me to fortify my skills as an effective communicator, and an individual who is proficient in task management.</p> 
-                    <p>I have one year of experience in automated testing based on the Cypress framework and javascript / typescript language. I am always open to new challenges and I am strongly focused on developing my skills.</p>
-                    <p>Out of the need of the heart, I am currently relocating to Scotland and I am looking for a company for a long-term contract. I will be happy to get interesting experiences and meet wonderful people on board.</p>
-                    <p>In my spare time, I am keen on sports, movies and coocking. I am also looking for a belay partner for climbing :)</p>
+                    <p>Hello! My name is Izabela and I'm a software tester with many years of experience with a focus on e-commerce.</p>
+                    <p>The opportunity to develop in my role as a software tester for a German telecom client has enabled me to fortify my skills as an effective communicator, and an individual who is proficient in task management.</p> 
+                    <p>As a candidate with one year of experience in automated testing based on the Cypress Framework and JavaScript/TypeScript language, and as someone who has a strong eagerness to develop my skills in an exciting new challenge, I would be a great fit in your organisation.</p>
+                    <p>Out of the need of the heart, I am currently relocating to Scotland and am looking for a long-term contract. I'm searching for a thought provoking, stimulating and inspiring challenge and in an environment with wonderful people.</p>
+                    <p>In my spare time I enjoy sports such rock climbing, watching movies and learning new cooking recipes.</p>
                 </div> <!-- end of div class="aboutContent" -->   
             </div> <!--end of div class="container-left" -->   
             <div class="container-right">
