change about my

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -35,6 +35,7 @@
                     <p>As a candidate with one year of experience in automated testing based on the Cypress Framework and JavaScript/TypeScript language, and as someone who has a strong eagerness to develop my skills in an exciting new challenge, I would be a great fit in your organisation.</p>
                     <p>Out of the need of the heart, I am currently relocating to Scotland and am looking for a long-term contract. I'm searching for a thought provoking, stimulating and inspiring challenge and in an environment with wonderful people.</p>
                     <p>In my spare time I enjoy sports such rock climbing, watching movies and learning new cooking recipes.</p>
+                    <p>IzQA</p>
                 </div> <!-- end of div class="aboutContent" -->   
             </div> <!--end of div class="container-left" -->   
             <div class="container-right">
