change css + font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport"content="width=device-width initial-scale=1"></meta>
         <link rel="stylesheet" href="css/homePageNew.css">
-        <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -22,8 +22,8 @@
                         <p>Senior Quality Assurance</p>
                     </header>
                     <div class="contact-text">
-                        <p class="phone"><strong>Phone </strong>[+48] 664-982-337</p>
-                        <p class="email"><strong>Email </strong>izabelaa.kam@gmail.com</p>
+                        <p class="phone"><strong>Phone: </strong>[+48] 664-982-337</p>
+                        <p class="email"><strong>Email: </strong>izabelaa.kam@gmail.com</p>
                     </div><!-- end of <div class="contact-text"> -->
                     <div class="contact-links">
                         <ul class="group links">
