--- a/aboutPage.html
+++ b/aboutPage.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport"content="width=device-width initial-scale=1"></meta>
         <link rel="stylesheet" href="css/aboutPage.css">
-        <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
