fix mistakes - about page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -30,10 +30,10 @@
                     </div> <!-- end of div class="aboutLine" -->   
                 </div> <!-- end of div class="aboutHeader group" -->
                 <div class="aboutContent">
-                    <p>Hello! My name is Izabela and I'm a software tester with many years of experience with a focus on e-commerce.</p>
+                    <p>Hello! My name is Izabela and I am a software tester with many years of experience with a focus on e-commerce.</p>
                     <p>The opportunity to develop in my role as a software tester for a German telecom client has enabled me to fortify my skills as an effective communicator, and an individual who is proficient in task management.</p> 
                     <p>As a candidate with one year of experience in automated testing based on the Cypress Framework and JavaScript/TypeScript language, and as someone who has a strong eagerness to develop my skills in an exciting new challenge, I would be a great fit in your organisation.</p>
-                    <p>Out of the need of the heart, I am currently relocating to Scotland and am looking for a long-term contract. I'm searching for a thought provoking, stimulating and inspiring challenge and in an environment with wonderful people.</p>
+                    <p>Out of the need of the heart, I am currently relocating to Scotland and am looking for a long-term contract. I am searching for a thought provoking, stimulating and inspiring challenge and in an environment with wonderful people.</p>
                     <p>In my spare time I enjoy sports such rock climbing, watching movies and learning new cooking recipes.</p>
                     <p>IzQA</p>
                 </div> <!-- end of div class="aboutContent" -->   
