--- a/cvPage.html
+++ b/cvPage.html
@@ -44,8 +44,8 @@
                             <li>Participating in all Sprint activities like Grooming, Planning, Daily stand-ups and
                                 Retrospectives</li>
                             <li>Daily verification of automated test reports and taking care to maintain a 100% pass rate in the test environment</li>
-                            <lil>Creating, maintaining and executing automated tests written in Cypress to support
-                                agile software development</lil>
+                            <li>Creating, maintaining and executing automated tests written in Cypress to support
+                                agile software development</li>
                         </ul>
                     </div> <!-- end of div class="contentjob 1a"-->
                     <div class="contentjob 1b">
