--- a/aboutPage.html
+++ b/aboutPage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <title>About Izabela Kaminska</title>
+        <meta charset="UTF-8">
         <meta name="viewport"content="width=device-width initial-scale=1"></meta>
         <link rel="stylesheet" href="css/aboutPage.css">
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
