--- a/cvPage.html
+++ b/cvPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
     <head>
         <title>Resume Izabela Kaminska</title>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport"content="width=device-width initial-scale=1"></meta>
         <link rel="stylesheet" href="css/cvPage.css">
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
